[package]
name = "app-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["config_simple", "config_derive"]

[dependencies]
config_simple = { path = "./config_simple" }
config_derive = { path = "./config_derive" }
