[package]
name = "app-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["config_simple", "config_derive"]

[dependencies]
config_derive = { path = "./config_derive" }

[dev-dependencies]
serde_yaml = "0.8.23"
serde = { version = "1.0.136", features = ["derive"] }
